--- a/DailySiteDistributor/.env
+++ b/DailySiteDistributor/.env
@@ -16,7 +16,10 @@ DB_PASSWORD=123456
 # Database Name
 DB_NAME=HEAT_MAP
 
-SSL_MODE=VERIFY_CA
+# RDS_SECRET_NAME
+RDS_SECRET_NAME=rds/db-test-private
+
+SSL_MODE=SKIP_VERIFY
 SSL_CA_CERT=./ssl_certs/ca-cert.pem
 SSL_CLIENT_CERT=./ssl_certs/client-cert.pem
 SSL_CLIENT_KEY=./ssl_certs/client-key.pem
