--- a/.github/workflows/deploy_lambda_daily_site_distributor.yml
+++ b/.github/workflows/deploy_lambda_daily_site_distributor.yml
@@ -15,6 +15,7 @@ env:
   AWS_ACCOUNT_ID: 683918607581
   GITHUB_OIDC_ROLE: HeatmapJapan-GithubAction
   LAMBDA_FUNCTION_NAME: HeatmapLambdaSplitSites
+  DIRECTORY_NAME: DailySiteDistributor
 
 jobs:
   deploy:
@@ -34,14 +35,14 @@ jobs:
 
     - name: Download RDS SSL Certificate
       run: |
-        cd lambda-function
+        cd ${{ env.DIRECTORY_NAME }}
         mkdir -p certs
         curl -o certs/${{ env.AWS_REGION }}-bundle.pem \
           https://truststore.pki.rds.amazonaws.com/${{ env.AWS_REGION }}/${{ env.AWS_REGION }}-bundle.pem
 
     - name: Build Lambda package
       run: |
-        cd lambda-function
+        cd ${{ env.DIRECTORY_NAME }}
         mkdir -p build
         if [ -f requirements.txt ]; then
           pip install -r requirements.txt -t build/ --upgrade
@@ -51,11 +52,11 @@ jobs:
 
     - name: Create deployment package
       run: |
-        cd lambda-function/build
+        cd ${{ env.DIRECTORY_NAME }}/build
         zip -r ../deployment-package.zip . -x "*.pyc" -x "*__pycache__*" -x "*.dist-info/*"
 
     - name: Cleanup downloaded certificate
-      run: rm -rf lambda-function/certs/
+      run: rm -rf ${{ env.DIRECTORY_NAME }}/certs/
 
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
@@ -68,7 +69,7 @@ jobs:
       run: |
         aws lambda update-function-code \
           --function-name ${{ env.LAMBDA_FUNCTION_NAME }} \
-          --zip-file fileb://lambda-function/deployment-package.zip \
+          --zip-file fileb://${{ env.DIRECTORY_NAME }}/deployment-package.zip \
           --publish
 
     - name: Wait for Lambda update
@@ -80,5 +81,5 @@ jobs:
     - name: Cleanup build artifacts
       if: always()
       run: |
-        rm -rf lambda-function/build/
-        rm -f lambda-function/deployment-package.zip
+        rm -rf ${{ env.DIRECTORY_NAME }}/build/
+        rm -f ${{ env.DIRECTORY_NAME }}/deployment-package.zip
